src/test/deca/context/valid/mul_mul_overflow.deca
// Description :
//
//      Test de programme contextuellement incorrect d'un produit de deux entiers menant à un overflow.
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    int y =99999*999990;
}