src/test/deca/context/invalid/plus_plus.deca
// Description :
//
//      Test de programme contextuellement incorrect de seulement +.
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    +;
}